packages/woff2_ffi/lib/src/ffi_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Suggested max size for output.
@ffi.Native<ffi.Size Function()>()
external int woff2_default_max_size();

@ffi.Native<
  ffi.Bool Function(ffi.Pointer<woff2_out_t>, ffi.Pointer<ffi.Void>, ffi.Size)
>()
external bool woff2_out_write(
  ffi.Pointer<woff2_out_t> out,
  ffi.Pointer<ffi.Void> buf,
  int n,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<woff2_out_t>,
    ffi.Pointer<ffi.Void>,
    ffi.Size,
    ffi.Size,
  )
>()
external bool woff2_out_write_at(
  ffi.Pointer<woff2_out_t> out,
  ffi.Pointer<ffi.Void> buf,
  int offset,
  int n,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<woff2_out_t>)>()
external int woff2_out_size(ffi.Pointer<woff2_out_t> out);

@ffi.Native<ffi.Void Function(ffi.Pointer<woff2_out_t>)>()
external void woff2_out_destroy(ffi.Pointer<woff2_out_t> out);

@ffi.Native<ffi.Pointer<woff2_string_out_t> Function()>()
external ffi.Pointer<woff2_string_out_t> woff2_string_out_create();

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<woff2_string_out_t>,
    ffi.Pointer<ffi.Void>,
    ffi.Size,
  )
>()
external bool woff2_string_out_write(
  ffi.Pointer<woff2_string_out_t> out,
  ffi.Pointer<ffi.Void> buf,
  int n,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<woff2_string_out_t>,
    ffi.Pointer<ffi.Void>,
    ffi.Size,
    ffi.Size,
  )
>()
external bool woff2_string_out_write_at(
  ffi.Pointer<woff2_string_out_t> out,
  ffi.Pointer<ffi.Void> buf,
  int offset,
  int n,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<woff2_string_out_t>)>()
external int woff2_string_out_size(ffi.Pointer<woff2_string_out_t> out);

@ffi.Native<ffi.Size Function(ffi.Pointer<woff2_string_out_t>)>()
external int woff2_string_out_max_size(ffi.Pointer<woff2_string_out_t> out);

@ffi.Native<ffi.Void Function(ffi.Pointer<woff2_string_out_t>, ffi.Size)>()
external void woff2_string_out_set_max_size(
  ffi.Pointer<woff2_string_out_t> out,
  int max_size,
);

@ffi.Native<ffi.Pointer<ffi.Uint8> Function(ffi.Pointer<woff2_string_out_t>)>()
external ffi.Pointer<ffi.Uint8> woff2_string_out_data(
  ffi.Pointer<woff2_string_out_t> out,
);

@ffi.Native<ffi.Void Function(ffi.Pointer<woff2_string_out_t>)>()
external void woff2_string_out_destroy(ffi.Pointer<woff2_string_out_t> out);

@ffi.Native<
  ffi.Pointer<woff2_memory_out_t> Function(ffi.Pointer<ffi.Uint8>, ffi.Size)
>()
external ffi.Pointer<woff2_memory_out_t> woff2_memory_out_create(
  ffi.Pointer<ffi.Uint8> buf,
  int buf_size,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<woff2_memory_out_t>,
    ffi.Pointer<ffi.Void>,
    ffi.Size,
  )
>()
external bool woff2_memory_out_write(
  ffi.Pointer<woff2_memory_out_t> out,
  ffi.Pointer<ffi.Void> buf,
  int n,
);

@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<woff2_memory_out_t>,
    ffi.Pointer<ffi.Void>,
    ffi.Size,
    ffi.Size,
  )
>()
external bool woff2_memory_out_write_at(
  ffi.Pointer<woff2_memory_out_t> out,
  ffi.Pointer<ffi.Void> buf,
  int offset,
  int n,
);

@ffi.Native<ffi.Size Function(ffi.Pointer<woff2_memory_out_t>)>()
external int woff2_memory_out_size(ffi.Pointer<woff2_memory_out_t> out);

@ffi.Native<ffi.Void Function(ffi.Pointer<woff2_memory_out_t>)>()
external void woff2_memory_out_destroy(ffi.Pointer<woff2_memory_out_t> out);

/// Compute the size of the final uncompressed font, or 0 on error.
@ffi.Native<ffi.Size Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external int woff2_compute_final_size(ffi.Pointer<ffi.Uint8> data, int length);

/// Decompresses the font into out. Returns true on success.
/// Works even if WOFF2Header totalSfntSize is wrong.
@ffi.Native<
  ffi.Bool Function(ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Pointer<woff2_out_t>)
>()
external bool woff2_convert_to_ttf(
  ffi.Pointer<ffi.Uint8> data,
  int length,
  ffi.Pointer<woff2_out_t> out,
);

@ffi.Native<woff2_params_t Function()>()
external woff2_params_t woff2_params_create();

/// Returns an upper bound on the size of the compressed file.
@ffi.Native<ffi.Size Function(ffi.Pointer<ffi.Uint8>, ffi.Size)>()
external int woff2_max_compressed_size(ffi.Pointer<ffi.Uint8> data, int length);

/// Returns an upper bound on the size of the compressed file.
@ffi.Native<
  ffi.Size Function(ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Pointer<ffi.Char>)
>()
external int woff2_max_compressed_size_with_extended_metadata(
  ffi.Pointer<ffi.Uint8> data,
  int length,
  ffi.Pointer<ffi.Char> extended_metadata,
);

/// Compresses the font into the target buffer. *result_length should be at least
/// the value returned by MaxWOFF2CompressedSize(), upon return, it is set to the
/// actual compressed size. Returns true on successful compression.
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Size>,
  )
>()
external bool woff2_convert_from_ttf(
  ffi.Pointer<ffi.Uint8> data,
  int length,
  ffi.Pointer<ffi.Uint8> result,
  ffi.Pointer<ffi.Size> result_length,
);

/// Compresses the font into the target buffer. *result_length should be at least
/// the value returned by MaxWOFF2CompressedSize(), upon return, it is set to the
/// actual compressed size. Returns true on successful compression.
@ffi.Native<
  ffi.Bool Function(
    ffi.Pointer<ffi.Uint8>,
    ffi.Size,
    ffi.Pointer<ffi.Uint8>,
    ffi.Pointer<ffi.Size>,
    ffi.Pointer<woff2_params_t>,
  )
>()
external bool woff2_convert_from_ttf_with_params(
  ffi.Pointer<ffi.Uint8> data,
  int length,
  ffi.Pointer<ffi.Uint8> result,
  ffi.Pointer<ffi.Size> result_length,
  ffi.Pointer<woff2_params_t> params,
);

final class woff2_out_t extends ffi.Opaque {}

final class woff2_string_out_t extends ffi.Opaque {}

final class woff2_memory_out_t extends ffi.Opaque {}

/// Encode
final class woff2_params_t extends ffi.Struct {
  external ffi.Pointer<ffi.Char> extended_metadata;

  @ffi.Int()
  external int brotli_quality;

  @ffi.Bool()
  external bool allow_transforms;
}
